package pattern.factorymethod;

public abstract class Product {
    public abstract void use();
}
